wp-content/plugins/candela-utility/themes/bombadil/style.css
/*
Theme Name: Bombadil
Description: One Theme To Rule Them All
Author: Lumen Learning
Version: 0.1
Template: pressbooks-book
Tags: Pressbooks Textbook

The screenshot.png for this theme was downloaded from https://www.flickr.com/photos/queerdood/5541802963/
and is used under a CC BY License.
*/

@import url("../../../pressbooks/themes-book/pressbooks-book/style.css");

/********************
	@Font-Face
*********************/
/* Google fonts included via functions.php */

body {
	font-family: "Crimson","Times New Roman", serif;
	line-height: 1.5em;
}

a {
	text-decoration: none;

}
h1, h2, h3, h4, h5, h6 {
	font-family: "Roboto Condensed", sans-serif;
	font-variant: normal;
	font-weight: normal;
}
h1 {
	font-size: 1.3em;
}
h1, h2 {
	text-align: left;
}
h2 {
	font-size: 1.2em;
}
h2, h3, h4 {
	font-style: normal;
}
h3, h4 {
	text-transform: uppercase;
}

h1 + p,
h2 + p,
h3 + p,
h4 + p,
h5 + p,
h6 + p {
	margin-top: -5px;
	margin-bottom: 15px;
}

ol.alphalist{
	list-style-type: lower-alpha;
	list-style-position: inside;
	margin-left: 25px;
}

ol.alphalist li::before{
	content: normal;
}

.pullleft{
	margin-right: 4%;
}
/****************************************
	Cover page
*****************************************/
.alt-formats{
	float: left;
	max-width: 340px;
	width: 35%;
}

.alt-formats h4{
	border-bottom-color: #FFFFFF;
	border-bottom-style: solid;
	border-bottom-width: 1px;
	padding-bottom: 10px;
	width: 100%;
}



/****************************************
	TOC, Author page, Book Page
*****************************************/

#inline-toc h4 {
	font-family: inherit;
	font-size: 1em;
	font-weight: bold;
	text-align: left;
	text-transform: none;
}
.page-title {
	font-weight: normal;
}
/****************************************
	Structure
*****************************************/

#content table.bcc-shrink tr th, #content table.bcc-shrink thead th{
	padding-right: 4px;
	padding-left: 4px;
}

#content table.bcc-shrink tr td {
	padding-left: 4px;
	padding-right: 4px;
}

/****************************************
	Title, Subtitle, Authors & Aphorism
*****************************************/
.entry-title {
	font-weight: normal;
	text-align: left;
	margin: 100px 0 80px;
	text-transform: none;
}
.entry-title span {
	border-bottom: 1px solid #333;
	padding: 0 0.2em 0.3em;
	text-align: center;
	width: 20%;
}
.chapter_subtitle {
	font-size: 1em;
	font-style: italic;
	font-weight: normal;
	margin: -80px 0 100px;
	line-height: 1.4em;
}
.chapter_author {
	font-family: "Crimson","Times New Roman", serif;
	font-style: italic;
	font-weight: normal;
	margin: -70px 0 100px;

}
.chapter_subtitle + .chapter_author {
	margin-top: -80px;
}
.aphorism {
	margin-bottom: 80px;
	margin-left: 100px;
	margin-top: -80px;
	padding: 0;
	text-align: right;
}
.aphorism cite {
	float: none;
}

/*************************
	Footnotes & Endnote
**************************/
.endnotes h3 {
	text-align: left;
	text-indent: 0;
	text-transform: none;
}

/*************************
	Footer
**************************/
p.cc-block{
	background-color: #f9f9f9 !important;
	border: 1px solid #dddddd !important;
	font-size: small;
	line-height: 17px;
	width: 100% !important;
	margin: 30px auto 8px !important;
	border-radius: 4px;

}

.screen-reader-text{
	display:none;
}

/*******************************
	Textbook specific styles
********************************/

.bcc-box{
	/*	width: 100%;*/
	padding: 2% 3%;
	margin-bottom: 15px;
	border-radius: 4px;
}

.bcc-box h3:first-child{
	text-align: center;
	margin: -2% -3% 15px;
	color: #ffffff;
	padding: 15px 0 15px;

}

.bcc-highlight{
	background-color: #f7f7f9;
}

.bcc-box.bcc-highlight h3{
	background-color: #111111;
}

.bcc-success{
	background-color: #eaf5ea;
}

.bcc-box.bcc-success h3{
	background-color: #3a7a33;
}

.bcc-info{
	background-color: #e3eff6;
}

.bcc-box.bcc-info h3{
	background-color: #0b6396;
}

.bcc-warning {
	background-color: #fcf8e3;
}

.bcc-box.bcc-warning h3{
	background-color: #c09853;
}

span.export-file-icon{
	width: 36px;
	height: 36px;
	background-size: 36px 36px;
	display: inline-block;
	margin: 0 5px 0 0;
}

span.small.epub {
	background: url(../../../pressbooks/assets/images/epub-36.png) -0 0 no-repeat;

}

span.small.epub3 {
	background: url(../../../pressbooks/assets/images/epub3-36.png) -0 0 no-repeat;

}

span.small.hpub {
	background: url(../../../pressbooks/assets/images/hpub-36.png) -0 0 no-repeat;

}

span.small.icml {
	background: url(../../../pressbooks/assets/images/icml-36.png) -0 0 no-repeat;

}

span.small.mobi {
	background: url(../../../pressbooks/assets/images/mobi-36.png) -0 0 no-repeat;

}

span.small.pdf {
	background: url(../../../pressbooks/assets/images/pdf-36.png) -0 0 no-repeat;

}

span.small.wxr {
	background: url(../../../pressbooks/assets/images/wxr-36-red.png) -0 0 no-repeat;

}

span.small.vanillawxr {
	background: url(../../../pressbooks/assets/images/vanillawxr-36.png) -0 0 no-repeat;

}

span.small.xhtml {
	background: url(../../../pressbooks/assets/images/xhtml-36.png) -0 0 no-repeat;

}

/*************************
	Media queries
**************************/

@media screen and (min-width: 940px) {
	#content{
		width: 720px;
	}

	.nav{
		width: 900px;
		margin-left: -450px;
	}

	#sidebar{
		margin-right: -24px;
	}
}

@media screen and (max-width: 990px ){
	.alt-formats{
		float: none;
		margin-bottom: 2em;
		margin-left: auto;
		margin-right: auto;
		margin-top: 2em;
		max-width: 80%;
		overflow-x: hidden;
		overflow-y: hidden;
		width: auto;
	}
}

@media screen and (max-width: 780px){
	.alt-formats{
		margin-bottom: 0;
		margin-left: auto;
		margin-right: auto;
		margin-top: 10px;
		max-width: 75%;
		width: auto;
	}
}

@media screen and (max-width: 620px){
	.alt-formats{
		max-width: 95%;
	}
}

/*************************
       Buttons
**************************/
.btn {
       box-shadow: 0 2px 2px rgba(0,0,0,0.1);
       border-radius: 4px;
       color: #fff;
       display: inline-block;
       font-family: 'Oswald', sans-serif;
       margin: 0 10px;
       padding: 7px 20px;
       text-align: center;
       text-transform: uppercase;
       width: 120px;
}

.citation-list {
	list-style: disc inside;
}

ul.lti-mapping {
	list-style: none;
}

div.expanded {
	padding-left: 46px;
	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 -46px no-repeat;
	height: 46px;
	line-height: 46px;
}

div.collapsed {
	padding-left: 46px;
	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 0 no-repeat;
	height: 46px;
	line-height: 46px;
}

